@@ -22,6 +22,7 @@ ChangeLog
 2009???? - 1.26.91
 
 [-] * Fixed parsing of vCards with lowercase types (bug #1006).
+[-] * Handle forward references in Nokia phonebook (bug #1009).
     
 20091012 - 1.26.90
 
